Nav-bar Changes / Documentation additions
Navigation bar:
It now has its own .html and gets included using <iframe> tag in each script instead of copy-paste-ing the entire navigation bar.

Added FlipCharacter(); to HumanoidController documentation.

--- a/2D Controller/TODO.txt
+++ b/2D Controller/TODO.txt
@@ -1,7 +1,6 @@
 humanoid-controller.html
 - Add link to 'combatSystem' property.
 - Add link to 'activeCollider' property.
-- Add to Public Methods -> WallSlide();
 - Add links to required and optional components
 
 changeHorizontalVelocity.html
@@ -21,4 +20,7 @@ try-dashing.html
 - Add link to 'CharacterDash' component in the description text.
 
 try-floor-slide.html
-- Add link to 'CharacterFloorSlide' component.
+- Add link to 'CharacterSlide' component.
+
+wall-slide.html
+- Add link to 'CharacterSlide' component.
