Additions to HumanoidController documentation
Added documentation for the properties of the humanoid controller.

Remains to add documentation for the protected properties and double check that eveything is documented correctly

--- a/2D Controller/TODO.txt
+++ b/2D Controller/TODO.txt
@@ -24,3 +24,6 @@ try-floor-slide.html
 
 wall-slide.html
 - Add link to 'CharacterSlide' component.
+
+ledge-detected.html
+- Add link to 'CharacterEnvironmentalQuery' component
